New classes added to handle resource better and allow users to configure some of the resources or actually all but it is not told to users :) -NM